--- a/benchmark/settings.json
+++ b/benchmark/settings.json
@@ -1,6 +1,6 @@
 {
     "key": {
-        "name": "DGJG",
+        "name": "DGJG1",
         "path": "/Users/dgjg/.ssh/aws"
     },
     "ports": {
@@ -15,7 +15,7 @@
         "branch": "master"
     },
     "instances": {
-        "type": "m5d.2xlarge",
+        "type": "m5d.xlarge",
         "regions": [
             "us-east-1",
             "us-west-1",
